# rust_compile_run

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-to-crates.yml
src/: main.rs
