[package]
name = "rust_compile_run"
version = "1.0.2"
edition = "2021"
authors = ["Abhisek Pattnaik <abhisekp@engineer.com>"]
description = "A Rust CLI tool to compile, run, and optionally delete Rust executables with additional features like file watching and notifications."
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
keywords = ["rust", "compile", "run", "watch", "notification"]
repository = "https://github.com/abhisekp/rust_compile_run"
homepage = "https://github.com/abhisekp/rust_compile_run"
documentation = "https://docs.rs/rust_compile_run"

[dependencies]
clap = "2.33.3"
tempfile = "3.2.0"
notify = "5.0.0"
notify-rust = "4.0.0"

[[bin]]
name = "rust_compile_run"
path = "src/main.rs"

[[bin]]
name = "rustcr"
path = "src/main.rs"